<resources>
    <string name="app_name">Sb Weather</string>
    <string name="SettingBar">Settings</string>
    <string name="aboutPage"> We are the Sunshine Boys, and we are making an app to facilitate an easier, user friendly use and logging of temperature and other ambient sensors. It consists of a mobile app that makes use of sensors connected to the phone to log and display the values returned by sensors. The application also supports sending these values to a remote server, as well as the history of readings, logged and viewable at the users discretion. This app is free, as you also have to purchase the hardware addon to use the app, which contains the required sensors to utilize the app properly.</string>
    <string name="FrgtPassword">Forget Password?</string>
    <string name="nohaveAcc">No account? Create one!</string>
    <string name="btnSignIn">Sign In</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="Name">Name</string>
    <string name="btnResetPassword">Reset Password</string>
    <string name="btnRegister">Register</string>
    <string name="haveAcc">Already have an account? Sign in</string>
    <string name="logoutMenu">Logout</string>
    <string name="refreshMenu">Refresh</string>
    <string name="aboutUsMenu">About us</string>
    <string name="logoScreenName">SB Weather</string>
    <string name="contactUsMenu">Contact us</string>
    <string name="github">https://github.com/NatHed/Sunshine-Boys-Project.git</string>
    <string name="pNumber">416.675.6622</string>
    <string name="eMail">sunshineboysapp@gmail.com</string>
    <string name="contactUs">Contact Us</string>

    <string name="aboutUs">About Us</string>
    <string name="homePage">Home</string>
    <string name="credentials">Please wait we are checking your credentials</string>
    <string name="login">Login Successful</string>
    <string name="faillogin">Login Failed, try again</string>
    <string name="temperature">Temperature</string>
    <string name="airpressure">Air Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="windspeed">Wind Speed</string>
    <string name="details">Please enter all the details</string>
    <string name="exit">Are you sure you want to exit this App?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="email">Please enter your Email</string>
    <string name="passreset">Password reset link has been sent!!</string>
    <string name="linkerror">Error sending the reset link</string>
    <string name="permission">Please allow the app permission</string>
    <string name="registersuccess">Registration Successful</string>
    <string name="registerunsuccess">Registration Unsuccessful, Please Try Again</string>
    <string name="vemail">please verify your Email Address</string>
    <string name="name">Please enter a correct Name</string>
    <string name="password">please verify your Password </string>
    <string name="settings">Settings</string>
    <string name="brightness">Adjust Brightness</string>

    <!--<<<<<<< HEAD-->
    =======
    <string name="questions"> For questions, email:</string>
    <string name="send_mail"> Send mail</string>
    >>>>>>> f799d3e2d397d48f71987c487e6306b820f041cf

    <string name="ckupd">You\'re up to date</string>
    <string name="setorg">Organization \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 Sunshine Boys</string>
    <string name="setver">Version \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 1.0.1</string>
    <string name="setupd">Check for Update!</string>
    <string name="toggle">Toggle Night Mode \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020</string>
    <string name="conpassmsg">Password not matching</string>
    <string name="passwordrestriction"><![CDATA[Password must be 7 characters, should contain 1 upper case and a special character (@#$%^&+=)]]></string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="refresh">"Page Refreshed"</string>
    <string name="ROOM1">Outside</string>
    <string name="ROOM2">Home</string>
    <string name="ROOM3">Greenhouse</string>
    <string name="sign_in_with_google_account">Sign in with Google?</string>
    <string name="sign_in">Sign In</string>
    <string name="googlewelcomeMsg">\"Welcome, \"</string>
    <string name="permissionMsg">Please allow the app permission</string>
    <string name="save_settings">Save Settings</string>
    <string name="save_settings_con">Settings have been saved</string>




</resources>